# razer_hdk_stm32

./: CMakeLists.txt  Kconfig  prj.conf  prj_mouse.conf  stm32-bindings.h
boards/: stm32_min_dev_blue.overlay
patches/: 0001-HID-Allow-changing-hid-boot-and-protocol-when-advert.patch
src/: hdk.c  main.c  mouse.c  razer.h  set_report.c  set_report.h  strip.h
src/effects/: breath.c  breath.h  effects.h  spectrum.c  spectrum.h  static.c  static.h  wave.c  wave.h
